--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,9 +15,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag quyc07:$(date +%s)
+        run: docker build . --file Dockerfile --tag quyc07/chat-room:$(date +%s)
       # Push the Docker image to Docker Hub
       - name: Push the Docker image
         run: |
           echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-          docker push quyc07:$(date +%s)
+          docker push quyc07/chat-room:$(date +%s)
