--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set timestamp variable
-        run: echo "::set-env name=TIMESTAMP::$(date +%s)"
+#      - name: Set timestamp variable
+#        run: echo "::set-env name=TIMESTAMP::$(date +%s)"
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag quyc07/chat-room:${{ env.TIMESTAMP }}
       - name: Push the Docker image
