--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,11 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-#      - name: Set timestamp variable
-#        run: echo "::set-env name=TIMESTAMP::$(date +%s)"
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag quyc07/chat-room:${{ env.TIMESTAMP }}
+        run: docker build . --file Dockerfile --tag quyc07/chat-room:${{ vars.TIMESTAMP }}
       - name: Push the Docker image
         run: |
           echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-          docker push quyc07/chat-room:${{ env.TIMESTAMP }}
+          docker push quyc07/chat-room:${{ vars.TIMESTAMP }}
