--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag quyc07/chat-room:${{ vars.TIMESTAMP }}
+        run: docker build . --file Dockerfile --tag quyc07/chat-room:latest
       - name: Push the Docker image
         run: |
           echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-          docker push quyc07/chat-room:${{ vars.TIMESTAMP }}
+          docker push quyc07/chat-room:latest
