--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,7 @@ FROM rust:latest
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
-COPY ../ /app
+COPY . /app
 
 # Build the Rust application
 RUN cargo build
